Bug #35378: added missing dependencies / start X11 server only if not already running
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52156 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (8.0.8-1) unstable; urgency=low
+
+  Bug #35378
+  * added missing dependencies
+  * start X11 server only if not already running
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Jul 2014 10:50:02 +0200
+
 univention-system-setup (8.0.7-4) unstable; urgency=low
 
   * Bug #34388: Updated links to appliance wizard 
