Bug #35378: call start script in chroot
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52157 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.3-1) unstable; urgency=low
+
+  * Bug #35378: install univention-system-setup
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Jul 2014 11:01:34 +0200
+
 di-univention-system-setup (0.0.2-1) unstable; urgency=low
 
   * Bug #35378: install univention-system-setup
