--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-64) unstable; urgency=medium
+
+  * Revert last change for errata3.2-2 release (Bug #33621, Bug #35252)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Jul 2014 11:05:29 +0200
+
 univention-s4-connector (8.0.33-63) unstable; urgency=medium
 
   * Abort joinscript if is_domain_in_admember_mode (Bug #35252)
