* Bug #35090 [WIP]: fixed JavaScript syntax error, use admember lib
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52159 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-20) unstable; urgency=medium
+
+  * Bug #35090 [WIP]: fixed JavaScript syntax error, use admember lib
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Jul 2014 11:14:47 +0200
+
 univention-ad-connector (8.0.17-19) unstable; urgency=medium
 
   * Bug #35090 [WIP]: integrated wizard prototype
