* Bug #34484: make sure that the current locale in UMC is also added to the   list of supported locales
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52166 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-38) unstable; urgency=medium
+
+  * Bug #34484: make sure that the current locale in UMC is also added to the
+    list of supported locales
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Jul 2014 14:49:18 +0200
+
 univention-system-setup (7.0.69-37) unstable; urgency=low
 
   * Bug #34388: Updated links to appliance wizard 
