* Use the correct dn in prepare_administrator (Bug #35091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52172 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-35) unstable; urgency=low
+
+  * Use the correct dn in prepare_administrator (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 24 Jul 2014 15:34:19 +0200
+
 univention-lib (3.0.26-34) unstable; urgency=low
 
   * Added more admember functions check_connection() and
