Bug #35378: fixed missing dependency
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52178 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.8-3) unstable; urgency=low
+
+  * Bug #35378: fixed missing dependency
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Jul 2014 16:32:58 +0200
+
 univention-system-setup (8.0.8-2) unstable; urgency=low
 
   * Bug #35378: deactivate package download in univention-system-setup-boot.postinst
