--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,20 @@
+univention-system-setup (8.0.9-1) unstable; urgency=low
+
+  * Bug #34484: fixed reference to undefined
+  Bug #34484:
+  * some text changes
+  * added tooltips to hostname and proxy field
+  * fixed CSS margins on page for role selection
+  * Bug #34484: fixed lang.hitch usage in ApplianceWizard:join(), minor text
+    adaptations
+  * Bug #34484: show the guessed domain name in the summary page
+  * Bug #34484: make sure that the current locale in UMC is also added to the
+    list of supported locales
+  * Bug #34484: fixed handling of codest (python module locale returns 'UTF8',
+    yet we need 'UTF-8')
+
+ -- Florian Best <best@univention.de>  Thu, 24 Jul 2014 16:46:17 +0200
+
 univention-system-setup (8.0.8-3) unstable; urgency=low
 
   * Bug #35378: fixed missing dependency
