Bug #34378: set locale for Univention System Setup
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52181 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.5-2) unstable; urgency=low
+
+  * Bug #34378: set locale for Univention System Setup
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Jul 2014 16:49:23 +0200
+
 di-univention-system-setup (0.0.5-1) unstable; urgency=low
 
   * Bug #35378: as a workaround restart all UMC services
