--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-29) unstable; urgency=medium
+
+  * Use library function is_domain_in_admember_mode (Bug #35252).
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Jul 2014 16:57:31 +0200
+
 univention-samba4 (3.0.39-28) unstable; urgency=medium
 
   * Abort joinscript if domaincontroller_master claims service "AD Member"
