--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,11 @@
+univention-samba4 (3.0.39-30) unstable; urgency=medium
+
+  * Special handling for adtakeover:
+    If a running adtakeover is detected, only disable the slapd on port 389
+    and then exit the joinscript with VERSION set to 1 (Bug #35252).
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Jul 2014 17:14:06 +0200
+
 univention-samba4 (3.0.39-29) unstable; urgency=medium
 
   * Use library function is_domain_in_admember_mode (Bug #35252).
