* Add debian/ucslint.overrides (Bug #35252).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52187 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-31) unstable; urgency=medium
+
+  * Add debian/ucslint.overrides (Bug #35252).
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Jul 2014 17:51:42 +0200
+
 univention-samba4 (3.0.39-30) unstable; urgency=medium
 
   * Special handling for adtakeover:
