--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-23) unstable; urgency=medium
+
+  * Bug #35090 [WIP]: enabled build of UMC module, fixed fuzzy entries
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Jul 2014 18:54:27 +0200
+
 univention-ad-connector (8.0.17-22) unstable; urgency=medium
 
   * Bug #35090 [WIP]: removed temporary package adconnector2, install graphics
