* Bug #35090 [WIP]: prototype with integrated AD join
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52193 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-24) unstable; urgency=medium
+
+  * Bug #35090 [WIP]: prototype with integrated AD join
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Jul 2014 20:49:30 +0200
+
 univention-ad-connector (8.0.17-23) unstable; urgency=medium
 
   * Bug #35090 [WIP]: enabled build of UMC module, fixed fuzzy entries
