--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-25) unstable; urgency=medium
+
+  * Bug #35090 [WIP]: fixed fuzzy translations
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Jul 2014 20:55:56 +0200
+
 univention-ad-connector (8.0.17-24) unstable; urgency=medium
 
   * Bug #35090 [WIP]: prototype with integrated AD join
