--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.5-3) unstable; urgency=low
+
+  * Bug #35378: updated dependencies (Provides: configured-ucs)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Jul 2014 22:34:40 +0200
+
 di-univention-system-setup (0.0.5-2) unstable; urgency=low
 
   * Bug #34378: set locale for Univention System Setup
