--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-26) unstable; urgency=low
+
+  * Added kerberos support for the AD connector (Bug #35349)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 25 Jul 2014 08:28:40 +0200
+
 univention-ad-connector (8.0.17-25) unstable; urgency=medium
 
   * Bug #35090 [WIP]: fixed fuzzy translations
