--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-39) unstable; urgency=low
+
+  * Start AD connector at the end of the configuration (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 25 Jul 2014 08:42:14 +0200
+
 univention-lib (3.0.26-38) unstable; urgency=low
 
   * admember mode updates (Bug #35091)
