--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (8.0.17-27) unstable; urgency=low
+
+  * Set univentionObjectFlag to synced for groups and computers
+    (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 25 Jul 2014 08:55:41 +0200
+
 univention-ad-connector (8.0.17-26) unstable; urgency=low
 
   * Added kerberos support for the AD connector (Bug #35349)
