Bug #35378: added another dependency / fixed switch to user nobody: keep DISPLAY env variable
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52202 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.10-1) unstable; urgency=low
+
+  * Bug #35378: added missing dependency
+  * Bug #35378: fixed startup of firefox if X11 is already running
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 25 Jul 2014 10:00:23 +0200
+
 univention-system-setup (8.0.9-1) unstable; urgency=low
 
   * Bug #34484: fixed reference to undefined
