Bug #35378: create /var/run/univention-management-console as workaround for Bug #35466 / fixed killing of apache2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52203 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+di-univention-system-setup (0.0.5-4) unstable; urgency=low
+
+  * Bug #35378: create /var/run/univention-management-console as
+    workaround for Bug #35466
+  * Bug #35378: fixed killing apache2
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 25 Jul 2014 10:09:07 +0200
+
 di-univention-system-setup (0.0.5-3) unstable; urgency=low
 
   * Bug #35378: updated dependencies (Provides: configured-ucs)
