--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-28) unstable; urgency=low
+
+  * Give more feedback if the kerberos authentication fails (Bug #35349)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 25 Jul 2014 10:11:08 +0200
+
 univention-ad-connector (8.0.17-27) unstable; urgency=low
 
   * Set univentionObjectFlag to synced for groups and computers
