--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-40) unstable; urgency=low
+
+  * Bug #34388: Updated links to appliance wizard 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 25 Jul 2014 10:15:02 +0200
+
 univention-system-setup (7.0.69-39) unstable; urgency=medium
 
   * Bug #34484: fixed handling of codest (python module locale returns 'UTF8',
