disbale password change in member mode (Bug #35467)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52206 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-40) unstable; urgency=low
+
+  * disbale password change in member mode (Bug #35467)
+
+ -- Felix Botner <botner@univention.de>  Fri, 25 Jul 2014 10:29:30 +0200
+
 univention-lib (3.0.26-39) unstable; urgency=low
 
   * Start AD connector at the end of the configuration (Bug #35091)
