--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-41) unstable; urgency=low
+
+  * unset kerberos/adminserver in member mode (Bug #35470) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 25 Jul 2014 10:41:28 +0200
+
 univention-lib (3.0.26-40) unstable; urgency=low
 
   * disbale password change in member mode (Bug #35467)
