--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.10-2) unstable; urgency=low
+
+  * Bug #34388: Updated links to appliance wizard 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 25 Jul 2014 10:33:53 +0200
+
 univention-system-setup (8.0.10-1) unstable; urgency=low
 
   * Bug #35378: added missing dependency
