use dns for kerberos in member mode (Bug #35470)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52210 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.19-7) unstable; urgency=low
+
+  * use dns for kerberos in member mode (Bug #35470) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 25 Jul 2014 10:57:59 +0200
+
 univention-samba (8.0.19-6) unstable; urgency=low
 
   * replaced ldap search with is_domain_in_admember_mode (Bug #35095) 
