--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.12-1) unstable; urgency=low
+
+  * Bug #35378: moved code from di-univention-system-setup.postinst to startxwithfirefox_installer
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 25 Jul 2014 11:45:06 +0200
+
 univention-system-setup (8.0.11-1) unstable; urgency=low
 
   * Bug #35378: use openbox instead of kwin
