--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,10 @@
+univention-join (6.0.18-7) unstable; urgency=low
+
+  * don't set kerberos/adminserver in member mode
+    in univention-join (Bug #35470) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 25 Jul 2014 12:07:42 +0200
+
 univention-join (6.0.18-6) unstable; urgency=low
 
   * do not configure ad member mode if ad/member is
