--- a/base/univention-heimdal/debian/changelog
+++ b/base/univention-heimdal/debian/changelog
@@ -1,3 +1,10 @@
+univention-heimdal (7.0.2-2) unstable; urgency=low
+
+  * use is_localhost_in_admember_mode to check
+    member mode (Bug #35470)
+
+ -- Felix Botner <botner@univention.de>  Fri, 25 Jul 2014 12:10:57 +0200
+
 univention-heimdal (7.0.2-1) unstable; urgency=low
 
   * don't set kerberos/kpasswdserver in member mode (Bug #35470)
