--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-41) unstable; urgency=low
+
+  * Bug #34388: Only redirect apache2 startsite on unjoined systems
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 25 Jul 2014 13:17:39 +0200
+
 univention-system-setup (7.0.69-40) unstable; urgency=low
 
   * Bug #34388: Updated links to appliance wizard 
