* Bug #34388: Only redirect apache2 startsite on unjoined systems
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52232 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.12-2) unstable; urgency=low
+
+  * Bug #34388: Only redirect apache2 startsite on unjoined systems
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 25 Jul 2014 13:20:25 +0200
+
 univention-system-setup (8.0.12-1) unstable; urgency=low
 
   * Bug #35378: moved code from di-univention-system-setup.postinst to startxwithfirefox_installer
