--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.13-1) unstable; urgency=low
+
+  * Bug #35378: mount /dev, /dev/pts, /proc and /sys to prevent segfaults
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 25 Jul 2014 14:21:26 +0200
+
 univention-system-setup (8.0.12-2) unstable; urgency=low
 
   * Bug #34388: Only redirect apache2 startsite on unjoined systems
