Bug #35378: set server/role before starting USS / added missing dependency
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52238 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.14-1) unstable; urgency=low
+
+  * Bug #35378: added missing dependency
+  * Bug #35378: set server/role before starting USS
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 25 Jul 2014 15:21:20 +0200
+
 univention-system-setup (8.0.13-1) unstable; urgency=low
 
   * Bug #35378: mount /dev, /dev/pts, /proc and /sys to prevent segfaults
