* Bug #35090 [WIP]: improved error handling for wizard in AD member mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52240 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-29) unstable; urgency=medim
+
+  * Bug #35090 [WIP]: improved error handling for wizard in AD member mode
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 25 Jul 2014 16:23:38 +0200
+
 univention-ad-connector (8.0.17-28) unstable; urgency=low
 
   * Give more feedback if the kerberos authentication fails (Bug #35349)
