added ucs-windows-promote-ad (Bug #35394)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52242 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (1.0.0-6) unstable; urgency=low
+
+  * added ucs-windows-promote-ad (Bug #35394)
+
+ -- Felix Botner <botner@univention.de>  Fri, 25 Jul 2014 16:34:10 +0200
+
 ucs-windows-tools (1.0.0-5) unstable; urgency=low
 
   * small fixes (Bug #35394) 
