* Bug #35090 [WIP]: added some functionality for ad-connector path in wizard
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52243 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,4 +1,10 @@
-univention-ad-connector (8.0.17-29) unstable; urgency=medim
+univention-ad-connector (8.0.17-30) unstable; urgency=low
+
+  * Bug #35090 [WIP]: added some functionality for ad-connector path in wizard
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 25 Jul 2014 16:45:32 +0200
+
+univention-ad-connector (8.0.17-29) unstable; urgency=low
 
   * Bug #35090 [WIP]: improved error handling for wizard in AD member mode
 
