--- a/base/pam-runasroot/debian/changelog
+++ b/base/pam-runasroot/debian/changelog
@@ -1,3 +1,9 @@
+pam-runasroot (6.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Jul 2014 15:35:48 +0200
+
 pam-runasroot (5.0.1-1) unstable; urgency=low
 
   * Set debhelper level to 7 (Bug #22433)
