--- a/base/pam-univentionmailcyrus/debian/changelog
+++ b/base/pam-univentionmailcyrus/debian/changelog
@@ -1,3 +1,9 @@
+pam-univentionmailcyrus (6.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Jul 2014 15:37:46 +0200
+
 pam-univentionmailcyrus (5.0.1-1) unstable; urgency=low
 
   * Support a comma separated option for ldap_host to support
