--- a/base/univention-bootsplash/debian/changelog
+++ b/base/univention-bootsplash/debian/changelog
@@ -1,3 +1,9 @@
+univention-bootsplash (6.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Jul 2014 16:57:24 +0200
+
 univention-bootsplash (5.0.0-1) unstable; urgency=low
 
   * Bump version for UCS 3.2, update copyright years for 2013
