--- a/base/univention-doc/debian/changelog
+++ b/base/univention-doc/debian/changelog
@@ -1,3 +1,9 @@
+univention-doc (2.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Jul 2014 17:10:38 +0200
+
 univention-doc (1.0.2-1) unstable; urgency=low
 
   * ucs overview page (Bug #32611) 
