univention-heimdal (8.0.0-1) unstable; urgency=medium
  * Update to UCS 4.0 (Bug #35267)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52255 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-heimdal/debian/changelog
+++ b/base/univention-heimdal/debian/changelog
@@ -1,3 +1,9 @@
+univention-heimdal (8.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Jul 2014 17:32:21 +0200
+
 univention-heimdal (7.0.2-2) unstable; urgency=low
 
   * use is_localhost_in_admember_mode to check
