--- a/base/univention-passwd-cache/debian/changelog
+++ b/base/univention-passwd-cache/debian/changelog
@@ -1,3 +1,9 @@
+univention-passwd-cache (4.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Jul 2014 18:02:45 +0200
+
 univention-passwd-cache (3.0.1-1) unstable; urgency=low
 
   * workaround for PEP 366 (Bug #23984)
