--- a/base/univention-passwd-store/debian/changelog
+++ b/base/univention-passwd-store/debian/changelog
@@ -1,3 +1,9 @@
+univention-passwd-store (8.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 25 Jul 2014 18:08:04 +0200
+
 univention-passwd-store (7.0.0-2) unstable; urgency=low
 
   * Update UCR variable descriptions (Bug #30943)	
