* Bug #35090 [WIP]: fixed fuzzy translations
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52259 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-32) unstable; urgency=medium
+
+  * Bug #35090 [WIP]: fixed fuzzy translations
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 25 Jul 2014 18:41:40 +0200
+
 univention-ad-connector (8.0.17-31) unstable; urgency=medium
 
   * Bug #35090 [WIP]: improved error/progress handling for AD member mode
