--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-33) unstable; urgency=low
+
+  * univention-ad-member: use univention.debug (Bug #34091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 25 Jul 2014 20:54:01 +0200
+
 univention-ad-connector (8.0.17-32) unstable; urgency=medium
 
   * Bug #35090 [WIP]: fixed fuzzy translations
