* Fixed exception names: s/faild/failed/g (Bug #34091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52264 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-44) unstable; urgency=low
+
+  * Fixed exception names: s/faild/failed/g (Bug #34091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sun, 27 Jul 2014 14:55:47 +0200
+
 univention-lib (3.0.26-43) unstable; urgency=low
 
   * python/admember: use univention.debug (Bug #34091)
