enable password change (Bug #35467)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52273 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-45) unstable; urgency=low
+
+  * enable password change (Bug #35467) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 28 Jul 2014 12:52:55 +0200
+
 univention-lib (3.0.26-44) unstable; urgency=low
 
   * Fixed exception names: s/faild/failed/g (Bug #34091)
