--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.19-8) unstable; urgency=low
+
+  * change password in ad member mode (Bug #35467)
+
+ -- Felix Botner <botner@univention.de>  Mon, 28 Jul 2014 13:37:48 +0200
+
 univention-samba (8.0.19-7) unstable; urgency=low
 
   * use dns for kerberos in member mode (Bug #35470) 
