fixed last commit (Bug #35467)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52277 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.19-9) unstable; urgency=low
+
+  * fixed last commit (Bug #35467) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 28 Jul 2014 14:24:29 +0200
+
 univention-samba (8.0.19-8) unstable; urgency=low
 
   * change password in ad member mode (Bug #35467)
