* Fix Ldb connection check against a native AD failing with FQDN given * Allow UDM modification of objects synchronized from AD (Bug #35346)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52280 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-31) unstable; urgency=medium
+
+  * Fix Ldb connection check against a native AD failing with FQDN given
+  * Allow UDM modification of objects synchronized from AD (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 28 Jul 2014 14:33:36 +0200
+
 univention-management-console-module-adtakeover (1.0.10-30) unstable; urgency=medium
 
   * Fix disable_admember_mode call (Bug #35346)
