--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba (8.0.19-10) unstable; urgency=low
+
+  * added prechange to password change script to
+    check time diff in member mode (Bug #35467) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 28 Jul 2014 15:35:17 +0200
+
 univention-samba (8.0.19-9) unstable; urgency=low
 
   * fixed last commit (Bug #35467) 
