* Bug #35090 [WIP]: Adaption of ConfigPage to Member/Connector mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52283 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-36) unstable; urgency=low
+
+  * Bug #35090 [WIP]: Adaption of ConfigPage to Member/Connector mode
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 28 Jul 2014 15:53:51 +0200
+
 univention-ad-connector (8.0.17-35) unstable; urgency=medium
 
   * Bug #35090 [WIP]: fixed ucslint error 
