--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-37) unstable; urgency=low
+
+  * Remove univention-ad-member (Bug #34091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 29 Jul 2014 08:10:12 +0200
+
 univention-ad-connector (8.0.17-36) unstable; urgency=low
 
   * Bug #35090 [WIP]: Adaption of ConfigPage to Member/Connector mode
