--- a/virtualization/xen-4.1/debian/changelog
+++ b/virtualization/xen-4.1/debian/changelog
@@ -1,3 +1,9 @@
+xen-4.1 (4.1.3-15) unstable; urgency=low
+
+  * Bug #35488 qemu-dm: Suppress "ungeistered DMA channel" message.
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 28 Jul 2014 15:17:02 +0200
+
 xen-4.1 (4.1.3-14) unstable; urgency=low
 
   * Fix multiple security issues:  (Bug #33316)
